# nebulabrot

./: .gitignore  Cargo.toml  README.md
src/: colour.rs  file_io.rs  main.rs  plot.rs
