[package]
name = "nebulabrot"
version = "1.0.0"
authors = ["Christian Kuhl <christian.kuhl84@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.1.34"
image = "0.24.2"
clap = "2.33.0"
byteorder = "1.3.2"
indicatif = "0.12.0"
rand = "0.7.2"
